# okClassic

./: .cproject  .project  CMakeLists.txt  LICENSE  Resource.h  bobsgame.aps  bobsgame.bmarks  bobsgame.cbp  bobsgame.cscope_file_list  bobsgame.depend  bobsgame.layout  bobsgame.sln  bobsgame.vcxproj  bobsgame.vcxproj.filters  bobsgame.workspace  bobsgame_build_log.html  gmon.out
Debug/data/bgm/: birds_horns_v00.mod  k_v01 - Copy.mod  k_v01.mod
Debug/data/rc/: bobsgame.rc
DebugMSVC/: bobsgame.ilk
DebugMSVC/data/bgm/: scary_v01.mod
DebugVS/: bobsgame.ilk  bobsgame.res  vc140.idb
DebugVS/bobsgame.tlog/: CL.command.1.tlog  CL.write.1.tlog  bobsgame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
DebugVS/data/bgm/: dinnertime_v00.s3m
Release/data/bgm/: bobend_v00.s3m  g65_theme_v00.mod  snappy_nice_v01.s3m
ReleaseVS/data/bgm/: k_v01.mod.AutoSave.20110712.170133.mod  snappy_v08.mod
data/bgm/: chase_v00.s3m  ramio_v00.s3m  s31_v07.mod
lib/SDL2_net-devel-2.0.0-mingw/: SDL2_net-devel-2.0.0-mingw.tar
nDmenu/: GLee.c  Makefile  README  bgmain.c  gles_example.c  glport.c  main.c  nD_GL.h  nD_sound.c  nD_types.h  nDmenu.bmarks  nDmenu.cbp  nDmenu.depend  nDmenu.layout  nDmenu_build_log.html
nDmenu/.target/: nDmenu.gpe
nDmenu/data/_unused/: nD_menu_v011.gal
nDmenu/data/bg/: nD_bg_tile.psd  nD_bg_tile_small.psd  nD_bg_tile_small_black.psd  nD_bg_tile_small_transparent.psd
nDmenu/data/movie/: bobsgame_gameplay.mpg  bobsgame_gameplay1.mpg  splarkapuzzle_gameplay.mpg  superbrobros_gameplay.mpg  yokoid_gameplay.mpg
nDmenu/smpeg/: MPEG.cpp  smpeg.cpp
nDmenu/smpeg/.svn/: dir-prop-base  entries
nDmenu/smpeg/PBProjects/.svn/: entries
nDmenu/smpeg/PBProjects/.svn/prop-base/: mkpbprojects.csh.svn-base
nDmenu/smpeg/PBProjects/English.lproj/.svn/: entries
nDmenu/smpeg/PBProjects/exports/.svn/: entries
nDmenu/smpeg/PBProjects/pkg-support/.svn/: entries
nDmenu/smpeg/PBProjects/pkg-support/devel-resources/.svn/: entries
nDmenu/smpeg/PBProjects/pkg-support/resources/.svn/: entries
nDmenu/smpeg/PBProjects/smpeg.pbproj/.svn/: entries
nDmenu/smpeg/acinclude/.svn/: entries
nDmenu/smpeg/audio/.svn/: dir-prop-base  entries
nDmenu/smpeg/video/: MPEGvideo.cpp  proto.h
nDmenu/smpeg/video/.svn/: dir-prop-base  entries
nDmenu/wiz3d/nanoGL/: build.sh  eglwrap.cpp  glesinterface.h  glesordinals.h  nanoGL.cbp  nanoGL.depend  nanoGL.layout  nanoWrap.cpp  nanogl.cpp
nDmenu/wiz3d/nanoGL/GL/: egl.h  gl.h
nDmenu/wiz3d/wizGLES/: Makefile  libnanoGL.so.0  wizGLES.cpp
nDmenu/wiz3d/wizGLES/GL/: gl.h  nanogl.h  wizGLES.h
nDmenu/wiz3d/wizGLES/GL/.svn/: all-wcprops  entries
nDmenu/wiz3d/wizGLES/GL/.svn/text-base/: egl.h.svn-base  libogl.h.svn-base
nDmenu/wiz3d/wizGLES/linux/lf1000/: buttons.h  dpc_ioctl.h  gpio_ioctl.h  pollux_fb_cfg.h  pollux_fb_ioctl.h  power.h  power_ioctl.h
src/: glew.c  main.cpp  main.h
src/GL/: glew.h
src/engine/: game.cpp  game.h
src/engine/game/: action.cpp  action.h  caption.cpp  caption.h  clock.cpp  clock.h  item.cpp  item.h  letterbox.cpp  letterbox.h  map.cpp  map.h  music.cpp  music.h  npc.cpp  npc.h  npccar.cpp  npccar.h  npcfuncs.cpp  npcfuncs.h  npcrand.cpp  npcrand.h  pathfind.h  player.cpp  player.h  save.cpp  save.h  start.cpp  start.h  txt.cpp  txt.h  txtanswer.cpp  txtanswer.h  txtkeyboard.cpp  txtkeyboard.h
src/engine/main/: controls.cpp  controls.h  debug.cpp  debug.h  error.cpp  error.h  gfx_vars.h  globals.cpp  hq2x_filter.h  misc.cpp  misc.h  render.cpp  render.h  snes_ntsc_filter.h.dontinclude  sound.cpp  sound.h  sprites.cpp  sprites.h  tilemaps.cpp  tilemaps.h  types.h
src/gamelogic/: changemap.cpp  changemap.h  logicmethods.h
src/gamelogic/city/: apartment.cpp  bank.cpp  casino.cpp  city.cpp  cityhall.cpp  deli.cpp  elevatedlifeplace.cpp  fashionstore.cpp  firestation.cpp  groovyclub.cpp  hospital.cpp  hotel.cpp  hourlymotel.cpp  laundromat.cpp  museum.cpp  office.cpp  partystore.cpp  pawnshop.cpp  policestation.cpp  poolhall.cpp  restaurant.cpp  stadium.cpp  thecafe.cpp
src/gamelogic/intro/: introtown.cpp  introtown.h  introyuushouse.cpp  introyuushouse.h
src/gamelogic/other/: castroom.cpp  japanhouse.cpp  meetingroom.cpp  minigame.cpp  minigame.h
src/gamelogic/title/: demoend.cpp  demoend.h  license.cpp  license.h  titlescreen.cpp  titlescreen.h  warning.cpp  warning.h
src/gamelogic/town/: arcade.cpp  beautysalon.cpp  bookstore.cpp  church.cpp  clubhouse.cpp  coffeeshop.cpp  crazyladyhouse.cpp  departmentstore.cpp  doctorsoffice.cpp  electronicsstore.cpp  friendshouse.cpp  gamestore.cpp  gasstation.cpp  generichouses.cpp  grocerystore.cpp  mansion.cpp  movietheater.cpp  petstore.cpp  pizzaplace.cpp  playground.cpp  recordstore.cpp  school.cpp  tacoburger.cpp  toolshed.cpp  town.cpp  town.h  videostore.cpp  yuushouse.cpp  yuushouse.h
src/minigame/: ping.cpp  ping.h  platformexplore.cpp  platformjump.cpp  ramio.cpp  ramio.h  tetrid.cpp  tetrid.h
