cmake_minimum_required(VERSION 3.3)
project(bobsgame)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    _assets/bigscreen_scanlines/bigscreen_scanlines.raw.c
    _assets/bigscreen_scanlines/scanlines.raw.c
    _assets/bigscreen_scanlines/text.pal.c
    _assets/font/font_bob.raw.c
    _assets/font/font_huge.raw.c
    _assets/font/font_japanese.raw.c
    _assets/font/font_normal.raw.c
    _assets/font/font_outlined.raw.c
    _assets/font/font_small.raw.c
    _assets/font/font_tiny.raw.c
    _assets/font/get_my_font_colors_right.raw.c
    _assets/font/text.pal.c
    _assets/intro/demo_end/all_gfx.h
    _assets/intro/license/all_gfx.h
    _assets/intro/warning/all_gfx.h
    _assets/minigame/gametoy/all_gfx.c
    _assets/minigame/gametoy/all_gfx.h
    _assets/minigame/gametoy/gametoy_broken_v01.c
    _assets/minigame/gametoy/gametoy_broken_v01.pal.c
    _assets/minigame/gametoy/gametoy_fullscreen_v01.c
    _assets/minigame/gametoy/gametoy_fullscreen_v01.pal.c
    _assets/minigame/gametoy/gametoy_v01.c
    _assets/minigame/gametoy/gametoy_v01.pal.c
    _assets/minigame/gametoy/gametoy_zoom_in_v01.c
    _assets/minigame/gametoy/gametoy_zoom_in_v01.pal.c
    _assets/minigame/tetrid/all_gfx.c
    _assets/minigame/tetrid/all_gfx.h
    _assets/miscgfx/answer_cursor.raw.c
    _assets/miscgfx/click.raw.c
    _assets/miscgfx/color_sprite.pal.c
    _assets/miscgfx/get_my_colors_right.raw.c
    _assets/miscgfx/letterbox_sprite.raw.c
    _assets/miscgfx/shadow.raw.c
    _assets/miscgfx/text_button_icon.raw.c
    _assets/miscgfx/text_keyboard.raw.c
    _assets/miscgfx/text_keyboard_caps.raw.c
    _assets/miscgfx/text_keyboard_notchopped.raw.c
    _assets/miscgfx/text_keypressed_icon.raw.c
    _assets/miscgfx/text_numpad.raw.c
    _assets/miscgfx/text_window_border.raw.c
    _assets/unused/character_set.raw.c
    _assets/unused/text.c
    _assets/unused/title_screen.h
    _assets/unused/title_sprite_path_values.h
    _assets/unused/txtfullscroll.h
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/OLD/vivid_A.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/OLD/vivid_B.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/cast_A.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/cast_B.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/choose_difficulty.map.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/choose_difficulty.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/down_arrow.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/font_overlay.map.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/font_overlay.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/green_checkerboard.map.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/green_checkerboard.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/how_to_play.map.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/how_to_play.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/intro_screen.map.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/intro_screen.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/left_arrow.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/master.pal.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/object.pal.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/right_arrow.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/gfx/up_arrow.raw.c
    _assets/unused_data/minigamegfx/beatgamegfx/button.h
    _assets/unused_data/minigamegfx/beatgamegfx/dwi.h
    _assets/unused_data/minigamegfx/beatgamegfx/sample.dwi.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/backup/blobs.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/backup/blobs.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/cast_A.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/cast_B.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/choose_difficulty.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/choose_difficulty.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/down_arrow.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/font_overlay.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/font_overlay.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/green_checkerboard.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/green_checkerboard.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/how_to_play.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/how_to_play.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/intro_screen.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/intro_screen.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/left_arrow.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/playing_field.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/playing_field.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/right_arrow.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/spiky.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/spiky.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/up_arrow.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/vivid_A.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/OLD/vivid_B.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/bg0.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/bg0.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/bg1.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/bg1.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/bg2.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/bg2.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/bg3.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/bg3.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/blobs.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/blobs.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/blue_blob.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/green_blob.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/intro_screen.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/intro_screen.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/master.pal.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/new_chopped_blobs.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/new_chopped_blobs.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/object.pal.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/ojami_blob.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/purple_blob.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/red_blob.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/wave.map.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/wave.raw.c
    _assets/unused_data/minigamegfx/blobgamegfx/gfx/yellow_blob.raw.c
    _assets/unused_data/minigamegfx/blockgamegfx/gfx/ENGLISHmaster.pal.c
    _assets/unused_data/minigamegfx/blockgamegfx/gfx/master.pal.c
    _assets/unused_data/minigamegfx/blockgamegfx/gfx/patterns.map.c
    _assets/unused_data/minigamegfx/blockgamegfx/gfx/patterns.raw.c
    _assets/unused_data/minigamegfx/blockgamegfx/gfx/playingbackground.map.c
    _assets/unused_data/minigamegfx/blockgamegfx/gfx/playingbackground.raw.c
    _assets/unused_data/minigamegfx/blockgamegfx/gfx/playingfield.map.c
    _assets/unused_data/minigamegfx/blockgamegfx/gfx/playingfield.raw.c
    _assets/unused_data/minigamegfx/blockgamegfx/gfx/scrollingbackground.map.c
    _assets/unused_data/minigamegfx/blockgamegfx/gfx/scrollingbackground.raw.c
    src/engine/game/action.cpp
    src/engine/game/action.h
    src/engine/game/caption.cpp
    src/engine/game/caption.h
    src/engine/game/clock.cpp
    src/engine/game/clock.h
    src/engine/game/item.cpp
    src/engine/game/item.h
    src/engine/game/letterbox.cpp
    src/engine/game/letterbox.h
    src/engine/game/map.cpp
    src/engine/game/map.h
    src/engine/game/music.cpp
    src/engine/game/music.h
    src/engine/game/npc.cpp
    src/engine/game/npc.h
    src/engine/game/npccar.cpp
    src/engine/game/npccar.h
    src/engine/game/npcfuncs.cpp
    src/engine/game/npcfuncs.h
    src/engine/game/npcrand.cpp
    src/engine/game/npcrand.h
    src/engine/game/pathfind.h
    src/engine/game/player.cpp
    src/engine/game/player.h
    src/engine/game/save.cpp
    src/engine/game/save.h
    src/engine/game/start.cpp
    src/engine/game/start.h
    src/engine/game/txt.cpp
    src/engine/game/txt.h
    src/engine/game/txtanswer.cpp
    src/engine/game/txtanswer.h
    src/engine/game/txtkeyboard.cpp
    src/engine/game/txtkeyboard.h
    src/engine/init/game_vars.h
    src/engine/main/controls.cpp
    src/engine/main/controls.h
    src/engine/main/debug.cpp
    src/engine/main/debug.h
    src/engine/main/error.cpp
    src/engine/main/error.h
    src/engine/main/gfx_vars.h
    src/engine/main/globals.cpp
    src/engine/main/globals.h
    src/engine/main/hq2x_filter.h
    src/engine/main/misc.cpp
    src/engine/main/misc.h
    src/engine/main/render.cpp
    src/engine/main/render.h
    src/engine/main/sound.cpp
    src/engine/main/sound.h
    src/engine/main/sprites.cpp
    src/engine/main/sprites.h
    src/engine/main/tilemaps.cpp
    src/engine/main/tilemaps.h
    src/engine/main/types.h
    src/engine/game.cpp
    src/engine/game.h
    src/gamelogic/city/apartment.cpp
    src/gamelogic/city/apartment.h
    src/gamelogic/city/bank.cpp
    src/gamelogic/city/bank.h
    src/gamelogic/city/casino.cpp
    src/gamelogic/city/casino.h
    src/gamelogic/city/city.cpp
    src/gamelogic/city/city.h
    src/gamelogic/city/cityhall.cpp
    src/gamelogic/city/cityhall.h
    src/gamelogic/city/deli.cpp
    src/gamelogic/city/deli.h
    src/gamelogic/city/elevatedlifeplace.cpp
    src/gamelogic/city/elevatedlifeplace.h
    src/gamelogic/city/fashionstore.cpp
    src/gamelogic/city/fashionstore.h
    src/gamelogic/city/firestation.cpp
    src/gamelogic/city/firestation.h
    src/gamelogic/city/groovyclub.cpp
    src/gamelogic/city/groovyclub.h
    src/gamelogic/city/hospital.cpp
    src/gamelogic/city/hospital.h
    src/gamelogic/city/hotel.cpp
    src/gamelogic/city/hotel.h
    src/gamelogic/city/hourlymotel.cpp
    src/gamelogic/city/hourlymotel.h
    src/gamelogic/city/laundromat.cpp
    src/gamelogic/city/laundromat.h
    src/gamelogic/city/museum.cpp
    src/gamelogic/city/museum.h
    src/gamelogic/city/office.cpp
    src/gamelogic/city/office.h
    src/gamelogic/city/partystore.cpp
    src/gamelogic/city/partystore.h
    src/gamelogic/city/pawnshop.cpp
    src/gamelogic/city/pawnshop.h
    src/gamelogic/city/policestation.cpp
    src/gamelogic/city/policestation.h
    src/gamelogic/city/poolhall.cpp
    src/gamelogic/city/poolhall.h
    src/gamelogic/city/restaurant.cpp
    src/gamelogic/city/restaurant.h
    src/gamelogic/city/stadium.cpp
    src/gamelogic/city/stadium.h
    src/gamelogic/city/thecafe.cpp
    src/gamelogic/city/thecafe.h
    src/gamelogic/intro/introtown.cpp
    src/gamelogic/intro/introtown.h
    src/gamelogic/intro/introyuushouse.cpp
    src/gamelogic/intro/introyuushouse.h
    src/gamelogic/other/castroom.cpp
    src/gamelogic/other/castroom.h
    src/gamelogic/other/japanhouse.cpp
    src/gamelogic/other/japanhouse.h
    src/gamelogic/other/meetingroom.cpp
    src/gamelogic/other/meetingroom.h
    src/gamelogic/other/minigame.cpp
    src/gamelogic/other/minigame.h
    src/gamelogic/title/demoend.cpp
    src/gamelogic/title/demoend.h
    src/gamelogic/title/license.cpp
    src/gamelogic/title/license.h
    src/gamelogic/title/titlescreen.cpp
    src/gamelogic/title/titlescreen.h
    src/gamelogic/title/warning.cpp
    src/gamelogic/title/warning.h
    src/gamelogic/town/arcade.cpp
    src/gamelogic/town/arcade.h
    src/gamelogic/town/beautysalon.cpp
    src/gamelogic/town/beautysalon.h
    src/gamelogic/town/bookstore.cpp
    src/gamelogic/town/bookstore.h
    src/gamelogic/town/church.cpp
    src/gamelogic/town/church.h
    src/gamelogic/town/clubhouse.cpp
    src/gamelogic/town/clubhouse.h
    src/gamelogic/town/coffeeshop.cpp
    src/gamelogic/town/coffeeshop.h
    src/gamelogic/town/crazyladyhouse.cpp
    src/gamelogic/town/crazyladyhouse.h
    src/gamelogic/town/departmentstore.cpp
    src/gamelogic/town/departmentstore.h
    src/gamelogic/town/doctorsoffice.cpp
    src/gamelogic/town/doctorsoffice.h
    src/gamelogic/town/electronicsstore.cpp
    src/gamelogic/town/electronicsstore.h
    src/gamelogic/town/friendshouse.cpp
    src/gamelogic/town/friendshouse.h
    src/gamelogic/town/gamestore.cpp
    src/gamelogic/town/gamestore.h
    src/gamelogic/town/gasstation.cpp
    src/gamelogic/town/gasstation.h
    src/gamelogic/town/generichouses.cpp
    src/gamelogic/town/generichouses.h
    src/gamelogic/town/grocerystore.cpp
    src/gamelogic/town/grocerystore.h
    src/gamelogic/town/mansion.cpp
    src/gamelogic/town/mansion.h
    src/gamelogic/town/movietheater.cpp
    src/gamelogic/town/movietheater.h
    src/gamelogic/town/petstore.cpp
    src/gamelogic/town/petstore.h
    src/gamelogic/town/pizzaplace.cpp
    src/gamelogic/town/pizzaplace.h
    src/gamelogic/town/playground.cpp
    src/gamelogic/town/playground.h
    src/gamelogic/town/recordstore.cpp
    src/gamelogic/town/recordstore.h
    src/gamelogic/town/school.cpp
    src/gamelogic/town/school.h
    src/gamelogic/town/tacoburger.cpp
    src/gamelogic/town/tacoburger.h
    src/gamelogic/town/toolshed.cpp
    src/gamelogic/town/toolshed.h
    src/gamelogic/town/town.cpp
    src/gamelogic/town/town.h
    src/gamelogic/town/videostore.cpp
    src/gamelogic/town/videostore.h
    src/gamelogic/town/yuushouse.cpp
    src/gamelogic/town/yuushouse.h
    src/gamelogic/changemap.cpp
    src/gamelogic/changemap.h
    src/gamelogic/logicmethods.h
    src/GL/glew.h
    src/GL/glxew.h
    src/GL/wglew.h
    src/minigame/microgame.cpp
    src/minigame/ping.cpp
    src/minigame/ping.h
    src/minigame/platformexplore.cpp
    src/minigame/platformjump.cpp
    src/minigame/ramio.cpp
    src/minigame/ramio.h
    src/minigame/shootergame.cpp
    src/minigame/tetrid.cpp
    src/minigame/tetrid.h
    src/glew.c
    src/main.cpp
    src/main.h
    Resource.h
    targetver.h)

add_executable(bobsgame ${SOURCE_FILES})